# crypto-connect-back

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
cc_back_project/: asgi.py  settings.py  urls.py  wsgi.py
config/: settings.py  urls.py
crypto/: models.py  serializer.py  urls.py  views.py
crypto/migrations/: 0001_initial.py  0002_auto_20210504_1638.py  0003_auto_20210504_1639.py  0004_alter_transaction_user_id.py  0005_auto_20210504_1735.py  0006_auto_20210504_1834.py
crypto_api/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
crypto_api/migrations/: 0001_initial.py  0002_auto_20210511_0327.py
